--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -17,12 +17,15 @@ jobs:
         uses: denoland/setup-deno@main
         with:
           deno-version: v1.x
-      # Check out the repository so it can read the files inside of it and do other operations
       - name: Check out repo
         uses: actions/checkout@v2
-      # The Flat Action step. We fetch the data in the http_url and save it as downloaded_filename
-      - name: Fetch data
+      - name: Fetch SDOT Collisions data
         uses: githubocto/flat@v2
         with:
           http_url: https://opendata.arcgis.com/datasets/5b5c745e0f1f48e7a53acec63a0022ab_0.csv
           downloaded_filename: collisions.csv
+      - name: Fetch Seattle City Council districts geojson
+        uses: githubocto/flat@v2
+        with:
+          http_url: https://opendata.arcgis.com/datasets/f14766ecd6274702bd786b214cb916e7_0.geojson
+          downloaded_filename: council_districts.geojson
